<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <color name="red">#FF6969</color>
    <color name="red2">#91368C</color>
    <color name="black">#000</color>
    <color name="white">#FFFFFF</color>
    <color name="green_test">#458B00</color>
    <color name="orange">#FFA500</color>
    <color name="red_test">#8B0000</color>
    <string name="tablon">Tablón</string>
    <string name="chat">Chat</string>
    <string name="archivos">Archivos</string>
    <string name="title_activity_activity_buscar_uni">ActivityBuscarUni</string>
    <string name="title_activity_activity_splash">ActivitySplash</string>
    <string name="registrate">Crear mi cuenta</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="title_activity_activity_registrate">¡Registrate!</string>
    <string name="title_activity_activity_login">¡Conéctate!</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="invalid_user_password">Usuario y/o contraseña no válidos</string>
    <string name="action_logout">Desconectarse</string>
    <string name="desconectado">Te has desconectado correctamente.</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contraseña_olvidada">¿Olvidaste tu contraseña?</string>
    <string name="email">Correo Electrónico</string>
    <string name="localizacion">Provincia</string>
    <string name="universidad">Universidad</string>
    <string name="facultad">Facultad</string>
    <string name="registrarte">Registrarte</string>
    <string name="disclaimer_registraste">Al pulsar en \'Registrate\' estás aceptando nuestros términos y condiciones de servicio y política de privacidad.</string>
    <string name="selecciona_provincia"><![CDATA[<Seleciona una provincia>]]></string>
    <string name="selecciona_universidad"><![CDATA[<<Seleciona Universidad>>]]></string>
    <string name="selecciona_facultad"><![CDATA[<<Seleciona Facultad>>]]></string>
    <string name="loading">Cargando…</string>
    <string name="passlenght">Al menos 6 caracteres</string>
    <string name="register_bad_parameters">¡Psst!¡Hay algún parámetro que está mal!</string>
    <string name="already_existing_user"> Ya existe un usuario con ese nombre </string>
    <string name="already_existing_email">Ya existe un usuario con ese e-mail</string>
    <string name="successful_register">¡ Te has registrado satisfactoriamente !</string>
    <string name="char150test"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis p</string>
    <string name="tablon_no_results">No hay mensajes aún en este tablón … Sé el primero en comentar :)</string>
    <string name="tablon_refrescar_mensajes">Actualiza los mensajes del tablón</string>
    <string name="enviar">¡ Enviar !</string>
    <string name="tablon_no_nuevos_mensajes">No hay nuevos mensajes en este tablón</string>
    <string name="tablon_star_string_access">Favorite Star</string>
    <string name="lupa_access">Lupa para buscar más facultades</string>
    <string name="ANDROID">Android</string>
    <string name="primero">PRIMER CURSO</string>
    <string name="segundo">SEGUNDO CURSO</string>
    <string name="tercero">TERCER CURSO</string>
    <string name="cuarto">CUARTO CURSO</string>
    <string name="title_activity_activity_solve_exam">Resolviendo un examen</string>
    <string name="solvedexamtext">¡ Enhorabuena ! \nHas completado el examen con éxito.\nPulsa este botón para mandar los resultados o revisa las preguntas antes de enviarlas</string>
    <string name="send_results_text">¡ Enviar Resultados !</string>
    <string name="your_results">Tus resultados :</string>
    <string name="your_mark">Tu nota :</string>
    <string name="session_expired">"Tu sesión ha expirado, conectate de nuevo "</string>
    <string name="exam_send_succesful">Se ha enviado correctamente el Test</string>
    <string name="exam_send_error">Se produjo un error al enviar el test</string>
    <string name="random_number">4564</string>
    <string name="error_cannot_favorited">No se puede modificar de favoritos en este momento. Inténtelo más tarde.</string>
    <string name="error_update_messages">No se pueden actualizar los mensajes. Inténtelo más tarde</string>
    <string name="your_favorite_subjects">Tus asignaturas Favoritas</string>
    <string name="title_activity_activity_message_detail">ActivityMessageDetail</string>
    <string name="activity_login_label">Iniciar sesión</string>
    <string name="activity_register_label">Regístrate</string>
    <string name="activity_solve_exam_label">Examen</string>
    <string name="activity_message_detail_label">Mensaje</string>
    <string name="preference_change_image">Cambiar Imagen</string>
    <string name="preference_change_password">Cambiar Password</string>
    <string name="preference_change_faculty">Cambiar Facultad</string>
    <string name="title_activity_activity_settings">ActivitySettings</string>
    <string name="image_uploaded_succesful">La imagen se subió correctamente.</string>
    <string name="error_image_upload">Hubo un error en la subida de imagen. Inténtelo más tarde.</string>
    <string name="splash_connection_error">Hay un error con la conexión al servidor… Inténtelo más tarde.</string>
    <string name="tab_chat_next">Próximamente incluiremos aquí un sistema de chat para que puedas comunicarte con los compañeros de tu facultad o con quien tú quieras :)</string>
    <string name="activity_settings_name">Tus opciones</string>
    <string name="title_activity_activity_change_password">Cambiar Contraseña</string>
    <string name="new_password_repeat">Contraseña Nueva (repetir)</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="title_activity_activity_change_faculty">Cambiar Facultad</string>
    <string name="message_hint">Escribe algo &#8230; ;)</string>
    <string name="send">Enviar</string>
    <string name="profile_me">Mi foto de perfil</string>
    <string name="profile_other">Foto de perfil de usuario</string>
    <string name="crear_nueva_sala">Crear Nueva Sala</string>
    <string name="action_statistics">Tus estadísticas</string>
    <string name="anonymous_question">¿Anónimo?</string>
    <string name="old_password">Antigua Contraseña</string>
    <string name="new_password">Contraseña Nueva</string>
    <string name="actual_password">Contraseña Actual</string>
    <string name="change_faculty">Cambiar Facultad</string>
    <string name="change_faculty_satisfactory">Has cambiado de facultad satisfactoriamente</string>
    <string name="subject">Asignatura</string>
    <string name="theme_optional">Tema(opcional)</string>
    <string name="want_exit_question">¿ Quieres salir ?</string>
    <string name="want_exit_app_string">¿ Estás seguro de que quieres salir de esta fantástica app ?</string>
    <string name="select_month_year">Seleccione Mes y Año</string>
    <string name="month_colon">Mes :</string>
    <string name="year_colon">Año :</string>
    <string name="not_selected">No seleccionado</string>
    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">April</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">July</string>
    <string name="august">Agosto</string>
    <string name="september">Septiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>
    <string name="description_optional">Descripción (opcional)</string>
    <string name="upload_file">Subir archivo</string>
    <string name="select_image">Selecciona Imagen</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="title_activity_activity_image_user_detail">Detalle Imagen</string>
    <string name="upload_file_insert_description">Introduce una pequeña descripción para este fichero</string>
    <string name="kind_file">Tipo de Archivo</string>
    <string name="notes">Apuntes</string>
    <string name="exam">Examen</string>
    <string name="unique_answer">Respuesta única</string>
    <string name="multiple_answer">Respuesta múltiple</string>
    <string name="short_answer">Respuesta Corta</string>
    <string name="pairing_answer">Emparejamientos</string>
    <string name="the_correct_answer_was">La respuesta correcta era ...</string>
    <string name="action_admin_panel">Panel de Administración</string>
    <string name="upload_exam">Subir examen</string>
    <string name="title_activity_activity_ver_imagenes_documentos">Detalle Documento
    </string>

</resources>
