<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">

    <item
        android:id="@+id/menu_send_message"
        android:icon="@drawable/ic_action_mail_add"
        android:showAsAction="ifRoom"
        android:title="@string/tablon_refrescar_mensajes" />

    <item
        android:id="@+id/menu_refresh_messages"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/tablon_refrescar_mensajes" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        compat:showAsAction="never" />

    <item
        android:id="@+id/action_admin_panel"
        android:orderInCategory="100"
        android:title="@string/action_admin_panel"
        android:visible="false"
        compat:showAsAction="never" />

    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:title="@string/action_statistics"
        compat:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        compat:showAsAction="never" />
</menu>
