<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/android_standard_padding">

        <TextView
            style="@style/registertext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subject" />

        <Spinner
            android:id="@+id/spinnersubject"
            style="@style/registertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/registertext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/theme_optional" />

        <Spinner
            android:id="@+id/spinnertheme"
            style="@style/registertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/month_colon" />

            <TextView
                android:id="@+id/textViewMonth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/textView5"
                android:layout_toRightOf="@+id/textView5"
                android:text="@string/not_selected" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView5"
                android:text="@string/year_colon" />

            <TextView
                android:id="@+id/textViewYear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewMonth"
                android:layout_alignParentEnd="false"
                android:layout_alignStart="@+id/textViewMonth"
                android:layout_below="@+id/textView5"
                android:layout_toEndOf="@+id/textView7"
                android:text="@string/not_selected" />
        </RelativeLayout>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_selectyearmonth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:text="@string/select_month_year"
            materialdesign:animate="false" />

        <TextView
            style="@style/registertext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description_optional" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text"
            android:hint="@string/upload_file_insert_description" />

        <TextView
            style="@style/registertext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/kind_file" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:id="@+id/notesradiobutton"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam"
                android:id="@+id/examenradiobutton"
                android:checked="false" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageViewThumb"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/image_border"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/button_selectimage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_toEndOf="@+id/imageViewThumb"
                android:layout_toRightOf="@+id/imageViewThumb"
                android:background="@color/red"
                android:text="@string/select_image"
                materialdesign:animate="false" />

        </RelativeLayout>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_send"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:text="@string/upload_file"
            materialdesign:animate="false" />

    </LinearLayout>
</ScrollView>