<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">



    <TextView
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/localizacion">
    </TextView>

    <Spinner
        android:id="@+id/spinnerlocation"
        style="@style/registertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/universidad">

    </TextView>

    <Spinner
        android:id="@+id/spinneruniversidad"
        style="@style/registertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/facultad" />

    <Spinner
        android:id="@+id/spinnerfacultad"
        style="@style/registertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
