<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Antigua Contraseña">

    </TextView>


    <EditText
        android:id="@+id/old_password"
        style="@style/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        />

    <TextView
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Contraseña Nueva"/>

    <EditText
        android:id="@+id/new_password_1"
        style="@style/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password_repeat"/>

    <EditText
        android:id="@+id/new_password_2"
        style="@style/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password_button"
        style="@style/registertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/change_password" />

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/contraseña_olvidada" />


</LinearLayout>